# AnimeOs

./: .placeholder-concurrently.json  LICENSE  README.md  index.html  package-lock.json  package.json  proxy-server.cjs  proxy-server.js  proxy_bundled.js
dist_proxy/: index.cjs
src/: App.css  App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/api.consumet.org/: package.json
src-tauri/api.consumet.org/.git_disabled/: config  index  packed-refs
src-tauri/api.consumet.org/.git_disabled/objects/pack/: pack-903b7a171c76082edfdf3c6d2d33c0a57a730f95.idx  pack-903b7a171c76082edfdf3c6d2d33c0a57a730f95.pack  pack-903b7a171c76082edfdf3c6d2d33c0a57a730f95.rev
src-tauri/api.consumet.org/.git_disabled/refs/heads/: main
src-tauri/api.consumet.org/src/: main.ts
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: AnimeCursor.css  AnimeCursor.jsx
src/components/Layout/Background/: CyberBackground.css  CyberBackground.jsx
src/components/Layout/Header/: Header.css  Header.jsx
src/components/Player/: CyberPlayer.css  CyberPlayer.jsx  DownloadTerminal.css  DownloadTerminal.jsx  Test.jsx
src/context/: BackgroundContext.jsx
src/hooks/: useAnimeSearch.js
src/services/: anilist.js  aniwatchService.js  api.config.js  consumetAnimeService.js  tauriHttpClient.js  trace.js
src/styles/: animations.css  glass.css  reset.css  variables.css
src/views/: DetailView.css  DetailView.jsx  HomeView.css  HomeView.jsx  PlayerView.css  PlayerView.jsx  RecognitionView.css  RecognitionView.jsx
(+2 files in other folders)
