[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"

[profile.release]
panic = "abort"
codegen-units = 16  # Antes era 1. Subirlo a 16 divide el trabajo en trozos pequeños para no llenar la RAM.
lto = false         # ¡IMPORTANTE! Desactivamos la optimización pesada. Esto salva tu memoria.
strip = true        # Quita símbolos de depuración para ahorrar espacio.
opt-level = "z"     # Optimizar para tamaño, consume menos RAM que "3".
